2005-05-12  Benoît Dejean  <TazForEver@dlfp.org>

	* src/proctable.c: (insert_info_to_tree): Fixed a leak.

2005-05-11  Benoît Dejean  <TazForEver@dlfp.org>

	* src/openfiles.c: (update_openfiles_dialog): Fixed a leak.
	
	* src/prettytable.c: (pretty_table_free): Don't forget to free all
	hashtables.

	* src/procman.c: (procman_free_data): Actually free the prettytable.
	
	* src/proctable.c: (get_process_name), (get_info): Fixed process name.

2005-05-07  Benoît Dejean  <TazForEver@dlfp.org>

	* src/prettytable.c: (create_scaled_icon): Don't warn if icon is
	missing. Closes #300315.

2005-05-02  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (update_disk):
	* src/infoview.c: (infoview_update):
	* src/load-graph.c: (get_memory):
	* src/memmaps.c: (add_new_maps):
	* src/proctable.c: (update_info_mutable_cols):
	* src/util.c: (procman_make_label_for_mmaps_or_ofiles),
	(SI_gnome_vfs_format_file_size_for_display):
	* src/util.h: Now displays SI units.
	TODO: s/SI_gnome_vfs_format_file_size_for_display/gnome_vfs_format_file_size_for_display
	when gnome-vfs 0K.

2005-04-30  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (fsusage_stats), (cb_update_disks):
	* src/gnome-system-monitor.schemas.in:
	* src/procdialogs.c: (show_all_fs_toggled),
	(procdialog_create_preferences_dialog):
	* src/procman.c: (show_all_fs_changed_cb), (procman_data_new):
	* src/procman.h: New option to show all devices.

2005-04-30  Benoît Dejean  <TazForEver@dlfp.org>

	* src/bacon-message-connection.c: Synced with libbacon.

2005-04-27  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_update_disks),
	(cb_volume_mounted_or_unmounted):
	* src/callbacks.h:
	* src/procman.c: (init_volume_monitor), (main): Refresh devices
	list whenever a device is mounted or unmounted.
	Closes #164292.

2005-04-19  Benoît Dejean  <TazForEver@dlfp.org>

	* src/Makefile.am:
	* src/callbacks.c: (cb_timeout):
	* src/procman.c: (timeouts_changed_cb), (procman_data_new),